feat: use start time and end time of snapshots to calculate timeout.